upgrading to IDEA 2022.2